# aoc2023

./: README.md
.github/workflows/: haskell.yml
aoc2023-hs/: .gitignore  aoc2023-hs.cabal
aoc2023-hs/HsRegex/: HsRegex.hs
aoc2023-hs/day1/: Main.hs
aoc2023-hs/day20/: Main.hs  MainOld.hs  day20.py
aoc2023-hs/day3/: Main.hs
aoc2023-hs/day4/: Main.hs
aoc2023-hs/day5/: Main.hs
aoc2023-hs/day6/: Main.hs
aoc2023-hs/day7/: Main.hs
aoc2023-hs/day8/: Main.hs
aoc2023-hs/regex-test/: Main.hs
aoc2024-hs/: .gitignore  aoc2024-hs.cabal
aoc2024-hs/HsRegex/: HsRegex.hs
aoc2024-hs/Utils/: Utils.hs
aoc2024-hs/day1/: Main.hs
aoc2024-hs/day2/: Main.hs
aoc2024-hs/inputs/: day1-testb.txt
aoc2024-hs/regex-test/: Main.hs
