cabal-version:      2.4
name:               aoc2023-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Advent of Code 2023 in Haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Ofsouzap
maintainer:         ofsouzap@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:

data-files:         inputs/day1.txt
                    inputs/day1-testa.txt
                    inputs/day1-testb.txt
                    inputs/day2.txt
                    inputs/day2-test.txt
                    inputs/day3.txt
                    inputs/day3-test.txt
                    inputs/day4.txt
                    inputs/day4-test.txt
                    inputs/day5.txt
                    inputs/day5-test.txt

library Utils
    exposed-modules:  Utils
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   Utils
    default-language: Haskell2010

library HsRegex
    exposed-modules:  HsRegex
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   HsRegex
    default-language: Haskell2010

test-suite RegexTest
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base >=4.16.4.0,
                      HUnit ^>=1.6,
                      HsRegex
    hs-source-dirs:   regex-test
    default-language: Haskell2010

executable day1
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      Utils
    hs-source-dirs:   day1
    default-language: Haskell2010

executable day2
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      Utils,
                      HsRegex
    hs-source-dirs:   day2
    default-language: Haskell2010

executable day3
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      array ^>= 0.5.4.0,
                      Utils
    hs-source-dirs:   day3
    default-language: Haskell2010

executable day4
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      containers ^>= 0.6.0.0,
                      Utils,
                      HsRegex
    hs-source-dirs:   day4
    default-language: Haskell2010

executable day5
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      Utils,
                      HsRegex
    hs-source-dirs:   day5
    default-language: Haskell2010

executable day6
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      Utils
    hs-source-dirs:   day6
    default-language: Haskell2010

executable day7
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      containers ^>= 0.6.0.0,
                      Utils
    hs-source-dirs:   day7
    default-language: Haskell2010
